gitops/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  labels:
    app: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        image: fallenbagel/jellyseerr:preview-seerr
        imagePullPolicy: Always
        ports:
        - containerPort: 5055
        volumeMounts:
        - name: overseerr-config
          mountPath: /config
      volumes:
      - name: overseerr-config
        persistentVolumeClaim:
          claimName: overseerr-config
