gitops/overseerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr
  namespace: overseerr
spec:
  parentRefs:
  - name: main
    namespace: cilium-gateway
    sectionName: https-overseerr
  - name: main
    namespace: cilium-gateway
    sectionName: https-sync-lt
  hostnames:
  - overseerr.sync.lt
  - sync.lt
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: overseerr
      port: 80
