gitops/overseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  namespace: overseerr
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - sync.lt
    - overseerr.sync.lt
    secretName: overseerr-letsencrypt
  rules:
  - host: sync.lt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr
            port:
              name: app
  - host: overseerr.sync.lt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr
            port:
              name: app
